# pi-userland

./: .gitignore  .prettierignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.agents/skills/new-package/: SKILL.md
.agents/skills/open-pr/: SKILL.md
.agents/skills/open-pr/evals/: evals.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  release-please-config.json  release-please-manifest.json
.github/workflows/: auto-merge-release-prs.yml  ci.yml  deploy-site.yml  release-please.yml  tests.yml
.pi/agent/skills/new-package/: SKILL.md
__tests__/: paths.test.ts
__tests__/yolo-seatbelt/: boundary.test.ts  paths.test.ts
apps/session-deck-desktop/: README.md  package.json  tsconfig.json
apps/session-deck-desktop/__tests__/: release-artifacts.test.ts  sync-web-assets.test.ts  tauri-host.test.ts
apps/session-deck-desktop/scripts/: build-macos-artifacts.js  checksum-artifacts.js  launch-branch.js  run-cargo.js  run-tauri.js  sync-web-assets.js
apps/session-deck-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/session-deck-desktop/src-tauri/capabilities/: default.json
apps/session-deck-desktop/src-tauri/src/: commands.rs  doctor.rs  helper_runner.rs  lib.rs  main.rs  runtime.rs
apps/session-deck-desktop/web/: app.js  index.html  style.css  tauri-host.js
concepts/: openrouter-sdk-vs-direct-fetch.md
examples/: basic-usage.ts  custom-patterns.ts
extensions/yolo-seatbelt/: boundary.ts  index.ts  logger.ts  paths.ts
projects/pi-openrouter-models-mvp/: phase-3-cache-layer.md
site/: index.html  styles.css
